2024-09-06  Andreas Scherer  <https://ascherer.github.io>

	* weav-twill.ch,
	* weave.ch: Sort section names in TWILL.

2024-09-02  Andreas Scherer  <https://ascherer.github.io>

	* bibtex.ch,
	* dvitype.ch,
	* gftodvi.ch,
	* gftopk.ch,
	* gftype.ch,
	* mft.ch,
	* pktype.ch,
	* pltotf.ch,
	* pooltype.ch,
	* tangle.ch,
	* tftopl.ch,
	* vftovp.ch,
	* vptovf.ch,
	* weave.ch: Flip two section names in the index.
	* dvicopy.ch,
	* dvicopy.web,
	* patgen.ch,
	* patgen.web,
	* pktogf.ch,
	* pktogf.web: Fix sorting order in 'other' WEB codees.

2024-08-31  Andreas Scherer  <https://ascherer.github.io>

	* vftovp.ch: Fix sorting order of new named sections.

2024-08-23  Andreas Scherer  <https://ascherer.github.io>

	* gftopk.ch,
	* gftype.ch,
	* pktogf.ch,
	* pktype.ch: Fix a few spaces.

2024-08-21  Andreas Scherer  <https://ascherer.github.io>

	* weav-twill.ch: Prime the title page.

2024-08-16  Andreas Scherer  <https://ascherer.github.io>

	* showstream.ch: Restore section numbering as far as possible.

2024-08-12  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.12 release.

2024-07-14  Andreas Scherer  <https://ascherer.github.io>

	* mft.ch: Preserve Metafont logo on title page.

2024-06-28  Andreas Scherer  <https://ascherer.github.io>

	* cwebdir/ctwill-w2c.ch,
	* tests/fix-changefile-lines.py,
	* tex.ch: Simpler check for 'change section'.

2024-06-24  Andreas Scherer  <https://ascherer.github.io>

	* tests/fix-changefile-lines.py,
	* bibtex.ch: Update a few tags.

2024-06-15  Andreas Scherer  <https://ascherer.github.io>

	* tests/fix-changefile-lines.py,
	* dvicopy.ch: Output '@x' with optional information.

2024-06-05  Andreas Scherer  <https://ascherer.github.io>

	* tests/fix-changefile-lines.py,
	* tangle.ch,
	* weave.ch: Correctly count section start markers.
	* mf.ch,
	* tex.ch: Recount parts and sections.

2024-06-03  David Fuchs  <drfuchs@yahoo.com>

	* tex.ch (check_outer_validity): don't check unless OK_to_interrupt,